@@ -67,9 +67,8 @@ OWFS_Initialize($)
   $hash->{UndefFn}    = "OWFS_Undef";
   $hash->{GetFn}      = "OWFS_Get";
   #$hash->{SetFn}      = "OWFS_Set";
-  $hash->{AttrList}   = "do_not_notify:1,0 dummy:1,0 temp-scale:C,F,K,R " .
-                        "showtime:1,0 loglevel:0,1,2,3,4,5,6";
-}
+  $hash->{AttrList}   = "IODev do_not_notify:1,0 dummy:1,0 temp-scale:C,F,K,R ".
+                        "showtime:1,0 loglevel:0,1,2,3,4,5,6"; }
 
 #####################################
 sub
